get skills
